Game Content up

--- a/public/stylesheet/base/utils.scss
+++ b/public/stylesheet/base/utils.scss
@@ -1,4 +1,5 @@
-@import "../.././node_modules/open-color/open-color.scss";
+@import "../../../node_modules/open-color/open-color.scss";
+// @import "../../../"
 
 
 @mixin size(){
