--- a/public/stylesheet/index.scss
+++ b/public/stylesheet/index.scss
@@ -1,3 +1,4 @@
+@import 'base/utils.scss';
 @import 'base/reset.css';
 
 @import 'layout/grid.scss';
@@ -6,10 +7,12 @@
 
 
 @import './components/button.scss';
+
+
+// pages
 @import './pages/CardSelectPage.scss';
 @import './pages/PaperGame.scss';
 @import './pages/RouletteGame.scss';
 @import './pages/SoccerGame.scss';
 
-@import 'utils.scss';
 
