--- a/public/stylesheet/pages/RouletteGame.scss
+++ b/public/stylesheet/pages/RouletteGame.scss
@@ -1,4 +1,4 @@
-
+.roulette-game{
 
 button {
   border: 0;
@@ -82,4 +82,5 @@ button {
   border-radius: 50px;
   z-index: 9999;
   cursor: pointer;
+}
 }
