--- a/views/Game/SoccerGame.ejs
+++ b/views/Game/SoccerGame.ejs
@@ -1,3 +1,4 @@
+<div class="soccer-game">
 <div class="score-board">
     <div class="korea-shots">
       <span>한국 남은슛</span>
@@ -10,10 +11,10 @@
       <span>번</span>
     </div>
     <div class="korea-score">
-      <div class="score-name"><img src="./img/kor-flag.jpg" alt="flag" width="40%">한국<span id="kr-score" class="panel-score">0</span></div>
+      <div class="score-name"><img src="../img/korea.png" alt="flag" width="40%">한국<span id="kr-score" class="panel-score">0</span></div>
     </div>
     <div class="japen-score">
-      <div class="score-name"><span id="jp-score" class="panel-score">0</span>일본<img src="./img/japen-flag.jpg" alt="flag" width="40%"></div>
+      <div class="score-name"><span id="jp-score" class="panel-score">0</span>일본<img src="../img/japen.png" alt="flag" width="40%"></div>
     </div>
     <div id="score-text">
     Shoot 버튼을 클릭해서 진행합니다.
@@ -21,11 +22,12 @@
   </div>
   <div class="control-panel">
     <div class="div-korea">
-      <div class="panel-name">한국</div>
+      <div class="panel-name">사용자</div>
       <button onclick="onKoreaShoot()" class="btn-korea"> Shoot</button>
     </div>
     <div class="div-japen">
-      <div class="panel-name">일본</div>
+      <div class="panel-name">컴퓨터</div>
       <button onclick="onJapenShoot()" class="btn-japen" disabled> Shoot</button>
     </div>
   </div>
+</div>
