--- a/public/stylesheet/pages/CardSelectPage.scss
+++ b/public/stylesheet/pages/CardSelectPage.scss
@@ -7,9 +7,9 @@
 
 .GameContainer {
   margin: 0 auto;
+  position: relative;
   width: 50%;
   height: 450px;
   margin-top: 5rem;
-  background: red;
-
+  // background: $oc-gray-2;
 }
