--- a/public/stylesheet/pages/PaperGame.scss
+++ b/public/stylesheet/pages/PaperGame.scss
@@ -1,6 +1,47 @@
+.rpsGame {  
+.grid-btn {
+  width: 100%;
+  position: absolute;
+  bottom: 10%;
+  padding: 1rem;
+
+  input {
+    margin: 1rem;
+  }
+}
+
+.game-score {
+  table {
+    position: absolute;
+    top: 90%;
+    left: 43%;
+
+  }
+}
+
+#user-title {
+  text-align: center;
+  padding-bottom: 2rem;
+  span {
+    padding: 0rem 14rem;
+  }
+  
+}
+.choice {
+  display: flex;
+  text-align: center;
+  img {
+    display: flex;
+    margin: 0 auto;
+    width: 200px;
+    height: 150px;    
+  }
+}
 
 th {
-  font-size: 24px;
+  font-size: 12px;
+  font-size: 12px;
+  letter-spacing: 1rem;
 }
 
 .choose{
@@ -11,11 +52,26 @@ th {
 }
 
 input {
-  border: 1px solid black;
+  // border: 1px solid black;
   height: 40px;
   width: 100px;
 }
 
 #wins, #losses, #ties {
   font-size: 24px;
+ }
+}
+
+.gbtn {
+  border: 0;
+  background: $oc-gray-1;
+  font-size: 12px;
+  box-sizing: border-box;
+
+
+  &:hover {
+    background: $oc-gray-2;
+    transition: all 0.1s;
+
+  }
 }
