--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>오늘뭐먹지!</title>
 </head>
-<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
-  crossorigin="anonymous"></script>
+
 
 <link rel="stylesheet" type="text/css"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -43,7 +42,7 @@
             <div class="cardContainer">
               <div class="red">
                 <p>가위바위보</p>
-                <img src="img/paper.png" alt="가위바위보">
+                <img src="img/rpsGame.png" alt="가위바위보">
               </div>
               <div class="blue">
                 <a href="#" class="top-btn btn">가위바위보</a>                             
@@ -82,7 +81,7 @@
             </div>
         </aside>
       </div>
-      <div class="Visual_3 si-z">
+      <div class="Visual_3 si-z" >
         <aside> 
           <h1>가위바위보게임</h1>
           <p>컴퓨터와 가위바위보를 통해 승리하면 랜덤으로 음식을 정해줍니다.</p>
@@ -100,8 +99,8 @@
       <div class="Visual_4 si-z" >
       <aside>
           <h1>돌림판</h1>
-          <p>컴퓨터와 가위바위보를 통해 승리하면 랜덤으로 음식을 정해줍니다.</p>
-          <p>게임에 졌다면 음식을 정해주지 않습니다. (다이어트)</p>
+          <p>가운데 시작 버튼을 눌러서 룰렛을 돌려보세요 !</p>
+          <p>다양한 메뉴중 한가지 메뉴를 정해줍니다.</p>
         <a href="#"><span class="prev-bot btn prev-btn"></span></a>
         <div class="GameContainer">
             <div>
@@ -114,6 +113,10 @@
     </article>
   </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  crossorigin="anonymous"></script>
+  <script src="https://cdn.sobekrepository.org/includes/jquery-rotate/2.2/jquery-rotate.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 <script src="./scripts/script.js" charset="utf-8"></script>
 <!-- <script src="./scripts/join.js" charset="utf-8"></script> -->
 
