--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -1,252 +1,196 @@
-@charset "UTF-8";
-@import 'base/reset.css';
+@import url(base/reset.css);
 @keyframes right-waterfall {
   0% {
     opacity: 0;
-    right: 50px;
-  }
+    right: 50px; }
   50% {
     opacity: 1;
-    right: 30px;
-  }
+    right: 30px; }
   100% {
     opacity: 0;
-    right: 0;
-  }
-}
+    right: 0; } }
 @keyframes left-waterfall {
   0% {
     opacity: 0;
-    left: 50px;
-  }
+    left: 50px; }
   50% {
     opacity: 1;
-    left: 30px;
-  }
+    left: 30px; }
   100% {
     opacity: 0;
-    left: 0;
-  }
-}
+    left: 0; } }
 @keyframes right-waterfall {
   0% {
     opacity: 0;
-    right: 50px;
-  }
+    right: 50px; }
   50% {
     opacity: 1;
-    right: 30px;
-  }
+    right: 30px; }
   100% {
     opacity: 0;
-    right: 0;
-  }
-}
+    right: 0; } }
 @keyframes left-waterfall {
   0% {
     opacity: 0;
-    left: 50px;
-  }
+    left: 50px; }
   50% {
     opacity: 1;
-    left: 30px;
-  }
+    left: 30px; }
   100% {
     opacity: 0;
-    left: 0;
-  }
-}
+    left: 0; } }
 article {
   position: relative;
   width: 100%;
   height: 960px;
-  overflow: hidden;
-}
-article .contentWrap {
-  width: 100%;
-  position: absolute;
-  text-align: center;
-  top: 30%;
-}
-article .contentWrap h1 {
-  font-size: 3.5rem;
-  color: White;
-}
-article .contentWrap span {
-  font-weight: 1000;
-  font-size: 3.8rem;
-  color: saddlebrown;
-}
-article .contentWrap img {
-  padding-top: 20px;
-  width: 150px;
-}
-article section {
-  left: 0;
-}
-article section .info {
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
-  z-index: 2;
-  color: #fff;
-  font-weight: 300;
-  font-size: 0.9rem;
-}
-article section .info span {
-  font-family: FontAwesome;
-  margin-right: 5px;
-  vertical-align: middle;
-  font-size: 15px;
-}
-article section .info span:before {
-  content: "";
-}
-article .si-z {
-  width: 100%;
-  height: 960px;
-  position: absolute;
-  background-color: orange;
-}
-article .Visual_1 {
-  background-color: #f8f9fa;
-  left: 100%;
-}
-article .Visual_1 .contentMenu {
-  position: absolute;
-  top: 20%;
-  left: 10%;
-  width: 80%;
-  height: 70%;
-}
-article .Visual_1 .contentMenu .card {
-  width: 100%;
-  text-align: center;
-  margin: 0 auto;
-  padding: 30px 0px;
-}
-article .Visual_1 .contentMenu div.cardContainer {
-  height: 450px;
-  width: 300px;
-  display: inline-block;
-  margin: 2%;
-}
-article .Visual_1 .contentMenu div.cardContainer div {
-  height: inherit;
-  width: inherit;
-  color: #FFF;
-  font-size: 24px;
-  backface-visibility: hidden;
-  -webkit-backface-visibility: hidden;
-  transition: all 1.5s;
-  -webkit-transition: all 1.5s;
-  -moz-transition: all 1.5s;
-  -o-transition: all 1.5s;
-  padding-top: 80px;
-  text-align: center;
-  box-shadow: 10px 10px 5px 0px #ffe8cc;
-}
-article .Visual_1 .contentMenu .red {
-  background-color: #ffe8cc;
-}
-article .Visual_1 .contentMenu .blue {
-  background-color: blue;
-}
-article .Visual_1 .contentMenu .yellow {
-  background-color: #ffd8a8;
-}
-article .Visual_1 .contentMenu .green {
-  background-color: Green;
-}
-article .Visual_1 .contentMenu .skyblue {
-  background-color: #ffc078;
-}
-article .Visual_1 .contentMenu .darkblue {
-  background-color: darkblue;
-}
-article .Visual_1 .contentMenu div.cardContainer div:last-child {
-  position: relative;
-  top: -530px;
-  transform: rotateY(180deg);
-  -webkit-transform: rotateY(180deg);
-  -ms-transform: rotateY(180deg);
-  -moz-transform: rotateY(180deg);
-  -o-transform: rotateY(180deg);
-}
-article .Visual_1 .contentMenu div.cardContainer:hover div:first-child {
-  transform: rotateY(-180deg);
-  -webkit-transform: rotateY(-180deg);
-  -ms-transform: rotateY(-180deg);
-  -moz-transform: rotateY(-180deg);
-  -o-transform: rotateY(-180deg);
-}
-article .Visual_1 .contentMenu div.cardContainer:hover div:last-child {
-  transform: rotateY(0deg);
-  -webkit-transform: rotateY(0deg);
-  -ms-transform: rotateY(0deg);
-  -moz-transform: rotateY(0deg);
-  -o-transform: rotateY(0deg);
-}
-article .Visual_2 {
-  background-color: #f8f9fa;
-  left: 200%;
-}
-article .Visual_3 {
-  background-color: #f8f9fa;
-  left: 100%;
-  top: 100%;
-}
-article .Visual_4 {
-  background-color: #f8f9fa;
-  left: 100%;
-  bottom: 100%;
-}
+  overflow: hidden; }
+  article .contentWrap {
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    top: 30%; }
+    article .contentWrap h1 {
+      font-size: 3.5rem;
+      color: White; }
+    article .contentWrap span {
+      font-weight: 1000;
+      font-size: 3.8rem;
+      color: saddlebrown; }
+    article .contentWrap img {
+      padding-top: 20px;
+      width: 150px; }
+  article section {
+    left: 0; }
+    article section .info {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      z-index: 2;
+      color: #fff;
+      font-weight: 300;
+      font-size: .9rem; }
+      article section .info span {
+        font-family: FontAwesome;
+        margin-right: 5px;
+        vertical-align: middle;
+        font-size: 15px; }
+        article section .info span:before {
+          content: "\f05a"; }
+  article .si-z {
+    width: 100%;
+    height: 960px;
+    position: absolute;
+    background-color: orange; }
+  article .Visual_1 {
+    background-color: #f8f9fa;
+    left: 100%; }
+    article .Visual_1 .contentMenu {
+      position: absolute;
+      top: 20%;
+      left: 10%;
+      width: 80%;
+      height: 70%; }
+      article .Visual_1 .contentMenu .card {
+        width: 100%;
+        text-align: center;
+        margin: 0 auto;
+        padding: 30px 0px; }
+      article .Visual_1 .contentMenu div.cardContainer {
+        height: 450px;
+        width: 300px;
+        display: inline-block;
+        margin: 2%; }
+      article .Visual_1 .contentMenu div.cardContainer div {
+        height: inherit;
+        width: inherit;
+        color: #FFF;
+        font-size: 24px;
+        backface-visibility: hidden;
+        -webkit-backface-visibility: hidden;
+        transition: all 1.5s;
+        -webkit-transition: all 1.5s;
+        -moz-transition: all 1.5s;
+        -o-transition: all 1.5s;
+        padding-top: 80px;
+        text-align: center;
+        box-shadow: 10px 10px 5px 0px rga(255, 232, 204); }
+      article .Visual_1 .contentMenu .red {
+        background-color: #ffe8cc; }
+      article .Visual_1 .contentMenu .blue {
+        background-color: blue; }
+      article .Visual_1 .contentMenu .yellow {
+        background-color: #ffd8a8; }
+      article .Visual_1 .contentMenu .green {
+        background-color: Green; }
+      article .Visual_1 .contentMenu .skyblue {
+        background-color: #ffc078; }
+      article .Visual_1 .contentMenu .darkblue {
+        background-color: darkblue; }
+      article .Visual_1 .contentMenu div.cardContainer div:last-child {
+        position: relative;
+        top: -530px;
+        transform: rotateY(180deg);
+        -webkit-transform: rotateY(180deg);
+        -ms-transform: rotateY(180deg);
+        -moz-transform: rotateY(180deg);
+        -o-transform: rotateY(180deg); }
+      article .Visual_1 .contentMenu div.cardContainer:hover div:first-child {
+        transform: rotateY(-180deg);
+        -webkit-transform: rotateY(-180deg);
+        -ms-transform: rotateY(-180deg);
+        -moz-transform: rotateY(-180deg);
+        -o-transform: rotateY(-180deg); }
+      article .Visual_1 .contentMenu div.cardContainer:hover div:last-child {
+        transform: rotateY(0deg);
+        -webkit-transform: rotateY(0deg);
+        -ms-transform: rotateY(0deg);
+        -moz-transform: rotateY(0deg);
+        -o-transform: rotateY(0deg); }
+  article .Visual_2 {
+    background-color: #f8f9fa;
+    left: 200%; }
+  article .Visual_3 {
+    background-color: #f8f9fa;
+    left: 100%;
+    top: 100%; }
+  article .Visual_4 {
+    background-color: #f8f9fa;
+    left: 100%;
+    bottom: 100%; }
 
 .intro {
   text-align: center;
   padding-top: 4rem;
-  line-height: 2rem;
-}
+  line-height: 2rem; }
 
 aside {
-  text-align: center;
-}
-aside h1 {
-  margin-top: 8rem;
-  margin-bottom: 2rem;
-}
-aside p {
-  line-height: 1.5rem;
-}
+  text-align: center; }
+  aside h1 {
+    margin-top: 8rem;
+    margin-bottom: 2rem; }
+  aside p {
+    line-height: 1.5rem; }
 
 @keyframes right-waterfall {
   0% {
     opacity: 0;
-    right: 50px;
-  }
+    right: 50px; }
   50% {
     opacity: 1;
-    right: 30px;
-  }
+    right: 30px; }
   100% {
     opacity: 0;
-    right: 0;
-  }
-}
+    right: 0; } }
 @keyframes left-waterfall {
   0% {
     opacity: 0;
-    left: 50px;
-  }
+    left: 50px; }
   50% {
     opacity: 1;
-    left: 30px;
-  }
+    left: 30px; }
   100% {
     opacity: 0;
-    left: 0;
-  }
-}
+    left: 0; } }
 .header-wrap {
   position: fixed;
   top: 0;
@@ -254,64 +198,52 @@ aside p {
   height: 70px;
   z-index: 1;
   /* Modal Content */
-  /* The Close Button */
-}
-.header-wrap .header {
-  width: 100%;
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 3rem 0rem;
-  text-align: right;
-}
-.header-wrap .modal-content {
-  position: absolute;
-  left: 37.5%;
-  top: 0;
-  /* opacity: 0; */
-  background-color: #fefefe;
-  padding: 20px;
-  border: 1px solid #888;
-  padding: 3rem;
-  width: 20%;
-}
-.header-wrap .close {
-  color: #aaaaaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-.header-wrap .close:hover,
-.header-wrap .close:focus {
-  color: #000;
-  text-decoration: none;
-  cursor: pointer;
-}
-.header-wrap .form-header {
-  text-align: center;
-  padding-bottom: 2rem;
-}
-.header-wrap .input-group {
-  text-align: center;
-  padding: 1rem;
-}
-.header-wrap .input-group input {
-  border: 0;
-  border-bottom: 1px solid #ffe8cc;
-  width: 100%;
-}
-.header-wrap .input-group:nth-child(0) {
-  padding-top: 2rem;
-}
-.header-wrap .form-footer {
-  text-align: center;
-}
-.header-wrap .form-footer button {
-  cursor: pointer;
-}
-.header-wrap .user-name {
-  display: flex;
-  justify-content: space-between;
-}
+  /* The Close Button */ }
+  .header-wrap .header {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 3rem 0rem;
+    text-align: right; }
+  .header-wrap .modal-content {
+    position: absolute;
+    left: 37.5%;
+    top: 0;
+    /* opacity: 0; */
+    background-color: #fefefe;
+    padding: 20px;
+    border: 1px solid #888;
+    padding: 3rem;
+    width: 20%; }
+  .header-wrap .close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold; }
+  .header-wrap .close:hover,
+  .header-wrap .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer; }
+  .header-wrap .form-header {
+    text-align: center;
+    padding-bottom: 2rem; }
+  .header-wrap .input-group {
+    text-align: center;
+    padding: 1rem; }
+    .header-wrap .input-group input {
+      border: 0;
+      border-bottom: 1px solid #ffe8cc;
+      width: 100%; }
+    .header-wrap .input-group:nth-child(0) {
+      padding-top: 2rem; }
+  .header-wrap .form-footer {
+    text-align: center; }
+    .header-wrap .form-footer button {
+      cursor: pointer; }
+  .header-wrap .user-name {
+    display: flex;
+    justify-content: space-between; }
 
 .modal {
   display: none;
@@ -333,8 +265,7 @@ aside p {
   background-color: black;
   /* Fallback color */
   background-color: rgba(0, 0, 0, 0.8);
-  /* Black w/ opacity */
-}
+  /* Black w/ opacity */ }
 
 aside .next-btn {
   position: absolute;
@@ -346,15 +277,12 @@ aside .next-btn {
   z-index: 2;
   font-size: 2.8rem;
   color: gray;
-  animation: right-waterfall 1.5s infinite ease-in-out;
-}
-aside .next-btn:hover {
-  color: black;
-  transition: 1s;
-}
+  animation: right-waterfall 1.5s infinite ease-in-out; }
+  aside .next-btn:hover {
+    color: black;
+    transition: 1s; }
 aside .next-btn:before {
-  content: "";
-}
+  content: "\f103"; }
 aside .prev-btn {
   position: absolute;
   font-family: FontAwesome;
@@ -365,15 +293,12 @@ aside .prev-btn {
   z-index: 2;
   font-size: 2.8rem;
   color: gray;
-  animation: left-waterfall 1.5s infinite ease-in-out;
-}
-aside .prev-btn:hover {
-  color: green;
-  transition: 1s;
-}
+  animation: left-waterfall 1.5s infinite ease-in-out; }
+  aside .prev-btn:hover {
+    color: green;
+    transition: 1s; }
 aside .prev-btn:before {
-  content: "";
-}
+  content: "\f103"; }
 
 .form-btn {
   border: 0;
@@ -382,14 +307,12 @@ aside .prev-btn:before {
   padding: 12px 20px;
   width: 100%;
   background: #ffc078;
-  box-shadow: 5px 5px 5px 5px #ffe8cc;
-}
+  box-shadow: 5px 5px 5px 5px #ffe8cc; }
 
 .login-btn {
   text-align: center;
   margin: 0 auto;
-  margin-top: 1rem;
-}
+  margin-top: 1rem; }
 
 .kko-btn {
   wdth: 50%;
@@ -397,92 +320,74 @@ aside .prev-btn:before {
   background: #FFDE00 !important;
   color: #3C1E1E;
   font-weight: bold;
-  margin-top: 1rem;
-}
+  margin-top: 1rem; }
 
 .cardContainer img {
   width: 100px;
-  padding-top: 2rem;
-}
+  padding-top: 2rem; }
 
 .GameContainer {
   margin: 0 auto;
   position: relative;
   width: 50%;
   height: 450px;
-  margin-top: 5rem;
-}
+  margin-top: 5rem; }
 
 .rpsGame .grid-btn {
   width: 100%;
   position: absolute;
   bottom: 10%;
-  padding: 1rem;
-}
-.rpsGame .grid-btn input {
-  margin: 1rem;
-}
+  padding: 1rem; }
+  .rpsGame .grid-btn input {
+    margin: 1rem; }
 .rpsGame .game-score table {
   position: absolute;
   top: 90%;
-  left: 43%;
-}
+  left: 43%; }
 .rpsGame #user-title {
   text-align: center;
-  padding-bottom: 2rem;
-}
-.rpsGame #user-title span {
-  padding: 0rem 14rem;
-}
+  padding-bottom: 2rem; }
+  .rpsGame #user-title span {
+    padding: 0rem 14rem; }
 .rpsGame .choice {
   display: flex;
-  text-align: center;
-}
-.rpsGame .choice img {
-  display: flex;
-  margin: 0 auto;
-  width: 200px;
-  height: 150px;
-}
+  text-align: center; }
+  .rpsGame .choice img {
+    display: flex;
+    margin: 0 auto;
+    width: 200px;
+    height: 150px; }
 .rpsGame th {
   font-size: 12px;
   font-size: 12px;
-  letter-spacing: 1rem;
-}
+  letter-spacing: 1rem; }
 .rpsGame .choose {
   font-size: 24px;
   font-weight: bold;
   margin-top: 15px;
-  margin-bottom: 30px;
-}
+  margin-bottom: 30px; }
 .rpsGame input {
   height: 40px;
-  width: 100px;
-}
+  width: 100px; }
 .rpsGame #wins, .rpsGame #losses, .rpsGame #ties {
-  font-size: 24px;
-}
+  font-size: 24px; }
 
 .gbtn {
   border: 0;
   background: #f1f3f5;
   font-size: 12px;
-  box-sizing: border-box;
-}
-.gbtn:hover {
-  background: #e9ecef;
-  transition: all 0.1s;
-}
+  box-sizing: border-box; }
+  .gbtn:hover {
+    background: #e9ecef;
+    transition: all 0.1s; }
 
 .roulette-game button {
   border: 0;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 .roulette-game .title {
   margin-top: 50px;
-  text-align: center;
-}
+  text-align: center; }
 .roulette-game .box-roulette {
   position: relative;
   margin: 50px auto;
@@ -491,8 +396,7 @@ aside .prev-btn:before {
   border: 10px solid #ccc;
   border-radius: 50%;
   background: #ccc;
-  overflow: hidden;
-}
+  overflow: hidden; }
 .roulette-game .box-roulette .markers {
   position: absolute;
   left: 50%;
@@ -504,37 +408,32 @@ aside .prev-btn:before {
   border-left-color: transparent;
   border-right-color: transparent;
   border-bottom-color: transparent;
-  z-index: 9999;
-}
+  z-index: 9999; }
 .roulette-game .box-roulette .roulette {
   position: relative;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-}
+  overflow: hidden; }
 .roulette-game .box-roulette .item {
   position: absolute;
   top: 0;
   width: 0;
   height: 0;
   border: 0 solid transparent;
-  transform-origin: 0 100%;
-}
+  transform-origin: 0 100%; }
 .roulette-game .box-roulette .label {
   position: absolute;
   left: 0;
   top: 0;
   color: #fff;
   white-space: nowrap;
-  transform-origin: 0 0;
-}
+  transform-origin: 0 0; }
 .roulette-game .box-roulette .label .text {
   display: inline-block;
   font-size: 20px;
   font-weight: bold;
   line-height: 1;
-  vertical-align: middle;
-}
+  vertical-align: middle; }
 .roulette-game #btn-start {
   display: block;
   position: absolute;
@@ -547,47 +446,39 @@ aside .prev-btn:before {
   background: #fff;
   border-radius: 50px;
   z-index: 9999;
-  cursor: pointer;
-}
+  cursor: pointer; }
 
 .soccer-game .panel-score {
   font-size: 30px;
-  margin: 25px;
-}
+  margin: 25px; }
 .soccer-game .wrap {
-  width: 100%;
-}
+  width: 100%; }
 .soccer-game .korea-shots {
   display: inline-block;
   width: 45%;
   text-align: center;
-  background: white;
-}
+  background: white; }
 .soccer-game .japen-shots {
   display: inline-block;
   width: 45%;
   text-align: center;
-  background: white;
-}
+  background: white; }
 .soccer-game .score-board {
   width: 500px;
   height: 350px;
-  margin: 0 auto;
-}
+  margin: 0 auto; }
 .soccer-game .korea-score {
   width: 45%;
   float: left;
   margin-top: 20%;
   text-align: center;
-  font-size: 18px;
-}
+  font-size: 18px; }
 .soccer-game .japen-score {
   width: 45%;
   float: right;
   margin-top: 20%;
   text-align: center;
-  font-size: 18px;
-}
+  font-size: 18px; }
 .soccer-game #score-text {
   height: 30px;
   background-color: #fcfcfc;
@@ -597,51 +488,41 @@ aside .prev-btn:before {
   border: 2px solid steelblue;
   display: flex;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
 .soccer-game .control-panel {
   width: 500px;
   margin: 0 auto;
-  height: 200px;
-}
+  height: 200px; }
 .soccer-game .div-korea {
   width: 50%;
   float: left;
   margin: 0 auto;
   text-align: center;
-  margin-top: 10%;
-}
+  margin-top: 10%; }
 .soccer-game .div-japen {
   width: 50%;
   float: left;
   margin: 0 auto;
   text-align: center;
-  margin-top: 10%;
-}
+  margin-top: 10%; }
 .soccer-game .score-name {
   display: flex;
-  align-items: center;
-}
-.soccer-game .score-name img {
-  padding: 1rem;
-}
+  align-items: center; }
+  .soccer-game .score-name img {
+    padding: 1rem; }
 .soccer-game .panel-name {
-  padding-bottom: 1rem;
-}
+  padding-bottom: 1rem; }
 .soccer-game button {
   padding: 20px 40px;
   border-radius: 10px;
   background-color: #fcfcfc;
-  border: 1px solid #dddddd;
-}
+  border: 1px solid #dddddd; }
 .soccer-game button:hover {
   border: 1px solid steelblue;
   color: steelblue;
-  transition: 0.8s;
-}
+  transition: 0.8s; }
 .soccer-game button:enabled {
   color: steelblue;
-  font-weight: bold;
-}
+  font-weight: bold; }
 
 /*# sourceMappingURL=index.css.map */
