--- a/views/index.ejs
+++ b/views/index.ejs
@@ -32,7 +32,7 @@
           <span>본 웹사이트는 크롬브라우저 및 데스크톱 환경에 최적화 되어있습니다.</span>
         </div>
       </section>
-      <div class="Visual_1 si-z" >
+      <div class="Visual_1 si-z" style="display: none;">
         <div class="intro">
           <h2>게임을 통해 점심을 정해보세요 !</h2>
           <p>총 3가지의 게임이 있습니다.</p>
@@ -81,7 +81,7 @@
             </div>
         </aside>
       </div>
-      <div class="Visual_3 si-z" >
+      <div class="Visual_3 si-z" style="position:absolute; top:0 ; left: 0;">
         <aside> 
           <h1>가위바위보게임</h1>
           <p>컴퓨터와 가위바위보를 통해 승리하면 랜덤으로 음식을 정해줍니다.</p>
@@ -108,8 +108,7 @@
               </div>
           </div>
       </aside>
-      </div>
-      
+      </div>      
     </article>
   </div>
 </body>
