roulette game 수정

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,6 +33,7 @@
         </div>
       </section>
       <div class="Visual_1 si-z" style="display: none;">
+          
         <div class="intro">
           <h2>게임을 통해 점심을 정해보세요 !</h2>
           <p>총 3가지의 게임이 있습니다.</p>
@@ -68,7 +69,7 @@
           <a href="#"><span class="prev-btn btn"></span></a>
         </aside>
       </div>
-      <div class="Visual_2 si-z" >
+          <div class="Visual_2 si-z" >
         <aside>
           <h1>월드컵</h1>
           <p>승부차기로 이기면 메뉴를 정해 보세요.</p>
@@ -81,7 +82,7 @@
             </div>
         </aside>
       </div>
-      <div class="Visual_3 si-z" style="position:absolute; top:0 ; left: 0;">
+      <div class="Visual_3 si-z" >
         <aside> 
           <h1>가위바위보게임</h1>
           <p>컴퓨터와 가위바위보를 통해 승리하면 랜덤으로 음식을 정해줍니다.</p>
@@ -96,7 +97,7 @@
               </a>
       </aside>
       </div>
-      <div class="Visual_4 si-z" >
+      <div class="Visual_4 si-z" style="position:absolute; top:0 ; left: 0;">
       <aside>
           <h1>돌림판</h1>
           <p>가운데 시작 버튼을 눌러서 룰렛을 돌려보세요 !</p>
@@ -116,6 +117,9 @@
   crossorigin="anonymous"></script>
   <script src="https://cdn.sobekrepository.org/includes/jquery-rotate/2.2/jquery-rotate.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+<script type="text/javascript" src="./scripts/Winwheel.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+
 <script src="./scripts/script.js" charset="utf-8"></script>
 <!-- <script src="./scripts/join.js" charset="utf-8"></script> -->
 
