--- a/views/myPage.ejs
+++ b/views/myPage.ejs
@@ -14,8 +14,24 @@
 <link rel="stylesheet" type="text/css" href="./stylesheet/index.css">
 
 <body>
-    <%= title %>
+  <article>
+  <div>
+      <% include header .profile %>
+  </div>
+  <div class="mypage si-z">
+    <div class="timeline">
+      <div class="intro-title">
+        <h1 class="">점심 메뉴 고른 기록</h1>
+    </div>
+      <div class="content">
+        
+      </div>
+    </div>
+  </div>
+</article>
 </body>
+
+
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
   <script src="https://cdn.sobekrepository.org/includes/jquery-rotate/2.2/jquery-rotate.min.js"></script>
