--- a/public/stylesheet/index.scss
+++ b/public/stylesheet/index.scss
@@ -13,5 +13,6 @@
 @import './pages/PaperGame.scss';
 @import './pages/RouletteGame.scss';
 @import './pages/SoccerGame.scss';
+@import './pages/myPage.scss';
 
 
