--- a/views/Game/RouletteGame.ejs
+++ b/views/Game/RouletteGame.ejs
@@ -1,11 +1,38 @@
 
-<div class="roulette-game">
-<div class="box-roulette">
-	<div class="markers"></div>
-	<button type="button" id="btn-start">
-		시작
-	</button>
-	<div class="roulette" id="roulette"></div>
-</div>
-</div>
+
+<div align="center">
+            <table cellpadding="0" cellspacing="0" border="0">
+                <tr>
+                    <td>
+                        <div class="power_controls">
+                            <br />
+                            <br />
+                            <table class="power" cellpadding="10" cellspacing="0">
+                                <tr>
+                                    <th align="center">세기</th>
+                                </tr>
+                                <tr>
+                                    <td width="78" align="center" id="pw3" onClick="powerSelected(3);">강하게</td>
+                                </tr>
+                                <tr>
+                                    <td align="center" id="pw2" onClick="powerSelected(2);">중간</td>
+                                </tr>
+                                <tr>
+                                    <td align="center" id="pw1" onClick="powerSelected(1);">약하게</td>
+                                </tr>
+                            </table>
+                            <br />
+                            <img id="spin_button" src="../img/spin_off.png" alt="Spin" onClick="startSpin();" />
+                            <br /><br />
+                            &nbsp;&nbsp;<a href="#" onClick="resetWheel(); return false;">다시하기</a><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(리셋)
+                        </div>
+                                <td width="438" height="582" class="the_wheel" align="center" valign="center">
+                                    <canvas id="canvas" width="434" height="434">
+                                        <p style="{color: white}" align="center">Sorry, your browser doesn't support canvas. Please try another.</p>
+                                    </canvas>
+                                </td>
+                    </td>
+                </tr>
+            </table>
+        </div>
 
