--- a/views/Game/RouletteGame.ejs
+++ b/views/Game/RouletteGame.ejs
@@ -28,7 +28,7 @@
                         </div>
                                 <td width="438" height="582" class="the_wheel" align="center" valign="center">
                                     <canvas id="canvas" width="434" height="434">
-                                        <p style="{color: white}" align="center">Sorry, your browser doesn't support canvas. Please try another.</p>
+                                        <!-- <p>Sorry, your browser doesn't support canvas. Please try another.</p> -->
                                     </canvas>
                                 </td>
                     </td>
