--- a/public/stylesheet/index.css
+++ b/public/stylesheet/index.css
@@ -530,7 +530,7 @@ aside .prev-btn:before {
 }
 .roulette-game .box-roulette .label .text {
   display: inline-block;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: bold;
   line-height: 1;
   vertical-align: middle;
@@ -551,7 +551,7 @@ aside .prev-btn:before {
 }
 
 td.the_wheel {
-  background-image: url(../img/wheel_back.png);
+  background-image: url(../img/wheel_back.gif);
   background-position: center;
   background-repeat: no-repeat;
   position: relative;
