--- a/public/stylesheet/pages/RouletteGame.scss
+++ b/public/stylesheet/pages/RouletteGame.scss
@@ -63,7 +63,7 @@ button {
 
 .box-roulette .label .text {
   display: inline-block;
-  font-size: 20px;
+  font-size: 15px;
   font-weight: bold;
   line-height: 1;
   vertical-align: middle;
@@ -86,7 +86,7 @@ button {
 }
 td.the_wheel
 {
-    background-image: url(../img/wheel_back.png);
+    background-image: url(../img/wheel_back.gif);
     background-position: center;
     background-repeat: no-repeat;
     position: relative;
