--- a/views/header.ejs
+++ b/views/header.ejs
@@ -71,4 +71,14 @@
 
 
     </div>
+    <div>
+      <form action="/auth/randfod" method="post">
+        <div class="form-group">
+          <label for="username">이메일</label>
+          <input type="text" name="email" value="" placeholder="Email">
+          <span class="login-icon1"><i class="material-icons">mail_outline</i></span>
+        </div>
+        <button type="submit" class="form-btn login-btn">음식보내기</button>               
+      </form>
+    </div>
   </div>
